--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <button onclick="addText()">Text</button>
     <button onclick="rotateSelected()">Drehen</button>
     <button onclick="undo()">Zurück</button>
-    <button onclick="redo()">Vor</button>
+    <button onclick="deleteSelected()">Gewähltes Objekt Löschen</button>
     <button onclick="exportPNG()">Bild erstellen</button>
     </div>
 
